[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Kolar-Light.otf" type="DynamicFontData" id=1]
[ext_resource path="res://BigDialog.gd" type="Script" id=2]
[ext_resource path="res://assets/dialog.png" type="Texture" id=3]
[ext_resource path="res://DialogDynamicFontName.tres" type="DynamicFont" id=4]
[ext_resource path="res://PragraphText.tres" type="DynamicFont" id=5]
[ext_resource path="res://DialogDFLabel.tres" type="DynamicFont" id=6]
[ext_resource path="res://DialogDynamicFontShortDesc.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=1]
size = 13
extra_spacing_bottom = -10
font_data = ExtResource( 1 )

[node name="BigDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -64.0
margin_bottom = -80.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
margin_left = -29.0
margin_top = -35.0
margin_right = 979.0
margin_bottom = 549.0
texture = ExtResource( 3 )
region_rect = Rect2( -15.9217, -23.52, 297.696, 277.41 )
patch_margin_left = 45
patch_margin_top = 50
patch_margin_right = 37
patch_margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Control" parent="NinePatchRect2"]
margin_left = 61.0
margin_top = 80.0
margin_right = 553.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Name"]
margin_right = 504.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect2/Name"]
margin_left = 8.0
margin_top = 4.0
margin_right = 496.0
margin_bottom = 49.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="LinkButton" parent="NinePatchRect2/Name/ScrollContainer"]
margin_right = 488.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
underline = 1

[node name="LongDesc" type="Control" parent="NinePatchRect2"]
margin_left = 61.0
margin_top = 192.0
margin_right = 553.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/LongDesc"]
margin_right = 504.0
margin_bottom = 328.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect2/LongDesc"]
margin_left = 8.0
margin_top = 11.0
margin_right = 496.0
margin_bottom = 315.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="NinePatchRect2/LongDesc/ScrollContainer"]
margin_right = 488.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortDesc" type="Control" parent="NinePatchRect2"]
margin_left = 61.0
margin_top = 136.0
margin_right = 553.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/ShortDesc"]
margin_right = 504.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect2/ShortDesc"]
margin_left = 8.0
margin_top = 3.0
margin_right = 496.0
margin_bottom = 48.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="NinePatchRect2/ShortDesc/ScrollContainer"]
margin_right = 488.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 7 )
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 0" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 80.0
margin_right = 992.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 0"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 0"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 0"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 0"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 1" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 136.0
margin_right = 992.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 1"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 1"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 1"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 1"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 2" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 192.0
margin_right = 992.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 2"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 2"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 2"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 2"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 3" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 248.0
margin_right = 992.0
margin_bottom = 296.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 3"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 3"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 3"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 3"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 4" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 304.0
margin_right = 992.0
margin_bottom = 352.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 4"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 4"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 4"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 4"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 5" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 360.0
margin_right = 992.0
margin_bottom = 408.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 5"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 5"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 5"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 5"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 6" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 464.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 6"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 6"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 6"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 6"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Field 7" type="Control" parent="NinePatchRect2"]
margin_left = 584.0
margin_top = 472.0
margin_right = 992.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="NinePatchRect2/Field 7"]
margin_right = 144.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background2" type="ColorRect" parent="NinePatchRect2/Field 7"]
margin_left = 152.0
margin_right = 376.0
margin_bottom = 48.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect2/Field 7"]
margin_left = 5.0
margin_right = 144.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="NinePatchRect2/Field 7"]
margin_left = 152.0
margin_right = 373.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="NinePatchRect2/Name/ScrollContainer/Text" to="." method="handleClick"]
